overflow fix

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -290,6 +290,12 @@
 	MOBILE
 */
 @media screen and (max-width: 960px) {
+	body::-webkit-scrollbar {
+		width: 0;
+		height: 0;
+		background-color: #fff;
+		border: none;
+	}
 	.mobile-visible {
 		display: inherit !important;
 	}
@@ -334,6 +340,9 @@
 	section#blog-item iframe {
 		height: 220px;
 		margin-bottom: 30px;
+	}
+	section#blog-articles .articles-holder .article .description-holder {
+		height: 277px;
 	}
 	section#blog-articles .articles-holder .article h4 {
 		font-size: 19px;
@@ -792,12 +801,6 @@
 	SMALL
 */
 @media screen and (max-width: 564px) {
-	body::-webkit-scrollbar {
-		width: 0;
-		height: 0;
-		background-color: #fff;
-		border: none;
-	}
 	#underconstruction .content-holder {
 		height: auto;
 	}
